Bug 1172470 - Remove unused unboxed case from GenerateDenseElementHole. r=jandem